add login out details profile

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,62 +1,65 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="256"
     android:viewportHeight="256">
-  <group android:scaleX="0.81"
-      android:scaleY="0.81"
-      android:translateX="24.32"
-      android:translateY="24.32">
-    <path
-        android:pathData="M128,128m-120,0a120,120 0,1 1,240 0a120,120 0,1 1,-240 0"
-        android:fillColor="#382b73"/>
-    <path
-        android:pathData="M128,128m-102.5,0a102.5,102.5 0,1 1,205 0a102.5,102.5 0,1 1,-205 0"
-        android:fillColor="#473080"/>
-    <path
-        android:pathData="m120.63,147.49c0.41,-1.11 0.76,-2.25 1.06,-3.41 0.34,-1.33 0.6,-2.69 0.79,-4.08h25.72c0.33,1.07 0.76,2.1 1.29,3.07 0.26,0.48 0.54,0.94 0.85,1.39 0.61,0.9 1.3,1.74 2.07,2.51 0.77,0.77 1.6,1.46 2.51,2.07 1.8,1.22 3.85,2.1 6.05,2.55 1.1,0.22 2.24,0.34 3.41,0.34 1.17,0 2.31,-0.12 3.41,-0.34 3.31,-0.68 6.26,-2.32 8.56,-4.61 1.15,-1.15 2.13,-2.46 2.91,-3.9 1.04,-1.92 1.72,-4.06 1.96,-6.34 0.06,-0.57 0.09,-1.15 0.09,-1.73 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.07 -8.26,-14.23 -16.69,-14.23 -7.61,0 -14.04,5.02 -16.17,11.92h-25.72c-0.57,-4.14 -1.83,-8.05 -3.67,-11.61l35.23,-24.77c0.29,0.22 0.57,0.45 0.87,0.65 0.9,0.61 1.86,1.13 2.88,1.56 2.03,0.86 4.25,1.33 6.59,1.33 2.34,0 4.56,-0.47 6.59,-1.33 2.03,-0.86 3.85,-2.1 5.38,-3.63s2.77,-3.35 3.63,-5.38c0.43,-1.01 0.76,-2.08 0.99,-3.18 0.22,-1.1 0.34,-2.24 0.34,-3.41 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.06 -8.26,-14.23 -16.69,-14.23 -7.95,0 -14.61,5.5 -16.42,12.89v0c-0.11,0.44 -0.2,0.88 -0.27,1.34 -0.04,0.23 -0.08,0.47 -0.11,0.71 -0.02,0.19 -0.04,0.37 -0.05,0.56 -0.04,0.47 -0.07,0.94 -0.07,1.43 0,1.17 0.12,2.31 0.34,3.41 0.13,0.61 0.29,1.21 0.48,1.8l-35.22,24.77c-6.63,-7.1 -16.07,-11.55 -26.56,-11.55 -19.31,0 -35.09,15.06 -36.26,34.07 -0,0.02 -0,0.04 -0,0.06 -0.04,0.73 -0.07,1.46 -0.07,2.2 0,3.14 0.4,6.18 1.14,9.08 0.3,1.16 0.65,2.3 1.06,3.41 0.2,0.56 0.42,1.11 0.65,1.65 0.69,1.63 1.5,3.2 2.4,4.7 0.61,1 1.26,1.97 1.96,2.9 5.23,6.99 12.93,12.04 21.8,13.86 2.37,0.48 4.82,0.74 7.32,0.74s4.96,-0.25 7.32,-0.74c7.52,-1.54 14.19,-5.41 19.23,-10.81l35.22,24.77c-0.13,0.38 -0.22,0.78 -0.32,1.18 -0.11,0.44 -0.2,0.88 -0.27,1.34 -0.04,0.23 -0.08,0.47 -0.11,0.71 -0.02,0.19 -0.04,0.37 -0.05,0.56 -0.04,0.47 -0.07,0.94 -0.07,1.43 0,1.17 0.12,2.31 0.34,3.41 0.45,2.2 1.33,4.25 2.55,6.05 0.61,0.9 1.3,1.74 2.07,2.51 0.77,0.77 1.6,1.46 2.51,2.07 0.9,0.61 1.86,1.13 2.88,1.56 2.03,0.86 4.25,1.33 6.59,1.33 2.34,0 4.56,-0.47 6.59,-1.33 2.03,-0.86 3.85,-2.1 5.38,-3.63 1.53,-1.53 2.77,-3.36 3.63,-5.38 0.43,-1.01 0.76,-2.08 0.99,-3.18 0.22,-1.1 0.34,-2.24 0.34,-3.41 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.07 -8.26,-14.23 -16.69,-14.23 -3.9,0 -7.47,1.33 -10.33,3.54l-35.23,-24.77c0.42,-0.81 0.81,-1.63 1.17,-2.47 0.23,-0.54 0.45,-1.09 0.65,-1.65z"
-        android:fillColor="#382b73"/>
-    <path
-        android:pathData="m83.59,123.94l77.88,-54.74l5.75,8.18l-77.88,54.74z"
-        android:fillColor="#fff"/>
-    <path
-        android:pathData="m86.38,127.89l77.88,-54.74l2.97,4.22l-77.88,54.74z"
-        android:fillColor="#e6e7e8"/>
-    <path
-        android:pathData="m83.59,132.05l5.75,-8.18l77.88,54.74l-5.75,8.18z"
-        android:fillColor="#fff"/>
-    <path
-        android:pathData="m83.59,132.05l2.84,-4.03l77.88,54.74l-2.84,4.03z"
-        android:fillColor="#e6e7e8"/>
-    <path
-        android:pathData="m86.49,123h77.88v10h-77.88z"
-        android:fillColor="#fff"/>
-    <path
-        android:pathData="m86.49,128h77.88v5h-77.88z"
-        android:fillColor="#e6e7e8"/>
-    <path
-        android:pathData="M86.49,128m-36.34,0a36.34,36.34 0,1 1,72.68 0a36.34,36.34 0,1 1,-72.68 0"
-        android:fillColor="#ef5a9d"/>
-    <path
-        android:pathData="m86.49,147.02c-17.08,0 -31.37,-11.8 -35.26,-27.68 -0.68,2.78 -1.08,5.67 -1.08,8.66 0,20.07 16.27,36.34 36.34,36.34s36.34,-16.27 36.34,-36.34c0,-2.99 -0.4,-5.88 -1.08,-8.66 -3.89,15.88 -18.18,27.68 -35.26,27.68z"
-        android:fillColor="#e43d91"/>
-    <path
-        android:pathData="M164.37,73.23m-16.92,0a16.92,16.92 0,1 1,33.85 0a16.92,16.92 0,1 1,-33.85 0"
-        android:fillColor="#1caee4"/>
-    <path
-        android:pathData="m164.37,82.09c-7.95,0 -14.61,-5.49 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z"
-        android:fillColor="#009add"/>
-    <path
-        android:pathData="M164.37,128m-16.92,0a16.92,16.92 0,1 1,33.85 0a16.92,16.92 0,1 1,-33.85 0"
-        android:fillColor="#1caee4"/>
-    <path
-        android:pathData="m164.37,136.86c-7.95,0 -14.61,-5.5 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z"
-        android:fillColor="#009add"/>
-    <path
-        android:pathData="M148.81,189.22a16.93,16.93 112.49,1 0,31.27 -12.96a16.93,16.93 112.49,1 0,-31.27 12.96z"
-        android:fillColor="#1caee4"/>
-    <path
-        android:pathData="m164.37,191.63c-7.95,0 -14.61,-5.49 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z"
-        android:fillColor="#009add"/>
-  </group>
+    <group
+        android:scaleX="0.81"
+        android:scaleY="0.81"
+        android:translateX="24.32"
+        android:translateY="24.32">
+        <path
+            android:fillColor="#382b73"
+            android:pathData="M128,128m-120,0a120,120 0,1 1,240 0a120,120 0,1 1,-240 0" />
+        <path
+            android:fillColor="#473080"
+            android:pathData="M128,128m-102.5,0a102.5,102.5 0,1 1,205 0a102.5,102.5 0,1 1,-205 0" />
+        <path
+            android:fillColor="#382b73"
+            android:pathData="m120.63,147.49c0.41,-1.11 0.76,-2.25 1.06,-3.41 0.34,-1.33 0.6,-2.69 0.79,-4.08h25.72c0.33,1.07 0.76,2.1 1.29,3.07 0.26,0.48 0.54,0.94 0.85,1.39 0.61,0.9 1.3,1.74 2.07,2.51 0.77,0.77 1.6,1.46 2.51,2.07 1.8,1.22 3.85,2.1 6.05,2.55 1.1,0.22 2.24,0.34 3.41,0.34 1.17,0 2.31,-0.12 3.41,-0.34 3.31,-0.68 6.26,-2.32 8.56,-4.61 1.15,-1.15 2.13,-2.46 2.91,-3.9 1.04,-1.92 1.72,-4.06 1.96,-6.34 0.06,-0.57 0.09,-1.15 0.09,-1.73 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.07 -8.26,-14.23 -16.69,-14.23 -7.61,0 -14.04,5.02 -16.17,11.92h-25.72c-0.57,-4.14 -1.83,-8.05 -3.67,-11.61l35.23,-24.77c0.29,0.22 0.57,0.45 0.87,0.65 0.9,0.61 1.86,1.13 2.88,1.56 2.03,0.86 4.25,1.33 6.59,1.33 2.34,0 4.56,-0.47 6.59,-1.33 2.03,-0.86 3.85,-2.1 5.38,-3.63s2.77,-3.35 3.63,-5.38c0.43,-1.01 0.76,-2.08 0.99,-3.18 0.22,-1.1 0.34,-2.24 0.34,-3.41 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.06 -8.26,-14.23 -16.69,-14.23 -7.95,0 -14.61,5.5 -16.42,12.89v0c-0.11,0.44 -0.2,0.88 -0.27,1.34 -0.04,0.23 -0.08,0.47 -0.11,0.71 -0.02,0.19 -0.04,0.37 -0.05,0.56 -0.04,0.47 -0.07,0.94 -0.07,1.43 0,1.17 0.12,2.31 0.34,3.41 0.13,0.61 0.29,1.21 0.48,1.8l-35.22,24.77c-6.63,-7.1 -16.07,-11.55 -26.56,-11.55 -19.31,0 -35.09,15.06 -36.26,34.07 -0,0.02 -0,0.04 -0,0.06 -0.04,0.73 -0.07,1.46 -0.07,2.2 0,3.14 0.4,6.18 1.14,9.08 0.3,1.16 0.65,2.3 1.06,3.41 0.2,0.56 0.42,1.11 0.65,1.65 0.69,1.63 1.5,3.2 2.4,4.7 0.61,1 1.26,1.97 1.96,2.9 5.23,6.99 12.93,12.04 21.8,13.86 2.37,0.48 4.82,0.74 7.32,0.74s4.96,-0.25 7.32,-0.74c7.52,-1.54 14.19,-5.41 19.23,-10.81l35.22,24.77c-0.13,0.38 -0.22,0.78 -0.32,1.18 -0.11,0.44 -0.2,0.88 -0.27,1.34 -0.04,0.23 -0.08,0.47 -0.11,0.71 -0.02,0.19 -0.04,0.37 -0.05,0.56 -0.04,0.47 -0.07,0.94 -0.07,1.43 0,1.17 0.12,2.31 0.34,3.41 0.45,2.2 1.33,4.25 2.55,6.05 0.61,0.9 1.3,1.74 2.07,2.51 0.77,0.77 1.6,1.46 2.51,2.07 0.9,0.61 1.86,1.13 2.88,1.56 2.03,0.86 4.25,1.33 6.59,1.33 2.34,0 4.56,-0.47 6.59,-1.33 2.03,-0.86 3.85,-2.1 5.38,-3.63 1.53,-1.53 2.77,-3.36 3.63,-5.38 0.43,-1.01 0.76,-2.08 0.99,-3.18 0.22,-1.1 0.34,-2.24 0.34,-3.41 0,-0.48 -0.03,-0.95 -0.07,-1.42 -0.02,-0.19 -0.03,-0.38 -0.05,-0.56 -0.03,-0.24 -0.07,-0.47 -0.11,-0.7 -1.29,-8.07 -8.26,-14.23 -16.69,-14.23 -3.9,0 -7.47,1.33 -10.33,3.54l-35.23,-24.77c0.42,-0.81 0.81,-1.63 1.17,-2.47 0.23,-0.54 0.45,-1.09 0.65,-1.65z"
+            tools:ignore="VectorPath" />
+        <path
+            android:fillColor="#fff"
+            android:pathData="m83.59,123.94l77.88,-54.74l5.75,8.18l-77.88,54.74z" />
+        <path
+            android:fillColor="#e6e7e8"
+            android:pathData="m86.38,127.89l77.88,-54.74l2.97,4.22l-77.88,54.74z" />
+        <path
+            android:fillColor="#fff"
+            android:pathData="m83.59,132.05l5.75,-8.18l77.88,54.74l-5.75,8.18z" />
+        <path
+            android:fillColor="#e6e7e8"
+            android:pathData="m83.59,132.05l2.84,-4.03l77.88,54.74l-2.84,4.03z" />
+        <path
+            android:fillColor="#fff"
+            android:pathData="m86.49,123h77.88v10h-77.88z" />
+        <path
+            android:fillColor="#e6e7e8"
+            android:pathData="m86.49,128h77.88v5h-77.88z" />
+        <path
+            android:fillColor="#ef5a9d"
+            android:pathData="M86.49,128m-36.34,0a36.34,36.34 0,1 1,72.68 0a36.34,36.34 0,1 1,-72.68 0" />
+        <path
+            android:fillColor="#e43d91"
+            android:pathData="m86.49,147.02c-17.08,0 -31.37,-11.8 -35.26,-27.68 -0.68,2.78 -1.08,5.67 -1.08,8.66 0,20.07 16.27,36.34 36.34,36.34s36.34,-16.27 36.34,-36.34c0,-2.99 -0.4,-5.88 -1.08,-8.66 -3.89,15.88 -18.18,27.68 -35.26,27.68z" />
+        <path
+            android:fillColor="#1caee4"
+            android:pathData="M164.37,73.23m-16.92,0a16.92,16.92 0,1 1,33.85 0a16.92,16.92 0,1 1,-33.85 0" />
+        <path
+            android:fillColor="#009add"
+            android:pathData="m164.37,82.09c-7.95,0 -14.61,-5.49 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z" />
+        <path
+            android:fillColor="#1caee4"
+            android:pathData="M164.37,128m-16.92,0a16.92,16.92 0,1 1,33.85 0a16.92,16.92 0,1 1,-33.85 0" />
+        <path
+            android:fillColor="#009add"
+            android:pathData="m164.37,136.86c-7.95,0 -14.61,-5.5 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z" />
+        <path
+            android:fillColor="#1caee4"
+            android:pathData="M148.81,189.22a16.93,16.93 112.49,1 0,31.27 -12.96a16.93,16.93 112.49,1 0,-31.27 12.96z" />
+        <path
+            android:fillColor="#009add"
+            android:pathData="m164.37,191.63c-7.95,0 -14.61,-5.49 -16.42,-12.89 -0.32,1.29 -0.5,2.64 -0.5,4.03 0,9.35 7.58,16.92 16.92,16.92s16.92,-7.58 16.92,-16.92c0,-1.39 -0.19,-2.74 -0.5,-4.03 -1.81,7.4 -8.47,12.89 -16.42,12.89z" />
+    </group>
 </vector>
