--- a/app/src/main/res/menu/menu_new_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_new_bottom_bar.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/take_photo"
         android:contentDescription="@string/desc_icon_take_a_photo"
         android:icon="@drawable/ic_photo_camera_24dp"
         android:title="@string/text_menu_item_take_a_photo"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
     <item
         android:id="@+id/load_attachment"
