--- a/app/src/main/res/menu/menu_user_details_top_bar.xml
+++ b/app/src/main/res/menu/menu_user_details_top_bar.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:keep="@menu/menu_user_details_top_bar">
     <item
         android:id="@+id/profile"
         android:contentDescription="@string/desc_icon_profile"
         android:icon="@drawable/ic_logout_24dp"
         android:title="@string/profile_item_menu"
+        android:visible="false"
         app:showAsAction="always" />
 </menu>
