--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
 
     </style>
 
-    <style name="ThemeOverlay.NeWork.FullscreenContainer" parent="">
+    <style name="ThemeOverlay.NeWork.FullscreenContainer" parent="" tools:keep="@style/ThemeOverlay_NeWork_FullscreenContainer">
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
