--- a/app/src/main/res/layout/job_new_fragment.xml
+++ b/app/src/main/res/layout/job_new_fragment.xml
@@ -8,11 +8,12 @@
     tools:context=".ui.users.JobNewFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/NewJobTB"
+        android:id="@+id/NewJobABL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/NewJobTBL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
