--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/signInFragment"
         android:name="ru.shelq.nework.ui.auth.SingInFragment"
-        android:label="@string/title_reg_button"
+        android:label="@string/title_sign_in"
         tools:layout="@layout/sign_in_fragment">
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
