--- a/app/src/main/res/layout/post_new_fragment.xml
+++ b/app/src/main/res/layout/post_new_fragment.xml
@@ -83,6 +83,9 @@
                 <include
                     android:id="@+id/image_container"
                     layout="@layout/image_load"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
                     android:visibility="gone"
                     tools:visibility="visible" />
 
